compiler-skeleton/tests/compile-error/function_param5.ln
def fn2(z:bool,x:int,c:bool):bool{
	return !z & c;
}
x:bool;
x = fn2(1,1,true);